# ann-suite

./: .devenv.flake.nix  .gitignore  AGENTS.md  README.md  TODO.md  devenv.nix  plan.md  pyproject.toml  setup_vm.sh
configs/: deep_metrics_example.yaml  example.yaml  manual_hnsw_sift10k.yaml  sift_1m_benchmark.yaml
docs/: ADDING_ALGORITHMS.md  ADDING_DATASETS.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DOCKER_OPTIMIZATIONS.md  METRICS.md  README.md
results/HNSW vs DiskANN SIFT-1M Benchmark_2026-01-30_21-53-06/: results.csv  results.json  results_detailed.json
src/ann_suite/: __init__.py  cli.py  evaluator.py
src/ann_suite/algorithms/: __init__.py
src/ann_suite/core/: __init__.py  config.py  constants.py  schemas.py
src/ann_suite/datasets/: __init__.py  download.py  loader.py
src/ann_suite/monitoring/: __init__.py  base.py  cgroups_collector.py  docker_stats_collector.py  ebpf_collector.py  io_utils.py  resource_monitor.py
src/ann_suite/results/: __init__.py  storage.py
src/ann_suite/runners/: __init__.py  container_runner.py
src/ann_suite/utils/: __init__.py  logging.py
tests/: test_cgroups_collector.py  test_ebpf_collector.py  test_metrics_schemas.py  test_monitor.py  test_schemas.py
