[project]
name = "ann-suite"
version = "0.1.0"
description = "Production-grade ANN Benchmarking Suite with containerized isolation and deep observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "ANN Suite Contributors" }
]
keywords = ["ann", "benchmarking", "approximate-nearest-neighbor", "vector-search", "hnsw", "diskann"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.10.0",
    "docker>=7.1.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "h5py>=3.12.0",
    "pyyaml>=6.0.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "psutil>=6.1.0",
    "ruff>=0.14.13",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.scripts]
ann-suite = "ann_suite.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ann_suite"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008", "N803", "N806", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
# Ignore missing stubs for third-party libraries without type information
# These libraries (docker, pandas, h5py, yaml) don't have py.typed markers
# or comprehensive type stubs available
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
